--- a/2018-12-14/写个博客.md
+++ b/2018-12-14/写个博客.md
@@ -6,11 +6,4 @@
 
 啦啦啦啦
 
-
-
-![image-20181214165658836](/Users/qping/Documents/personal/博客/2018-12-14/assets/image-20181214165658836-4777818.png)
-
-
-
-
-
+![image-20181215220512406](image-20181215220512406-4882712.png)
