--- a/post/2018-12-16/博客重构(1) 架构设计.md
+++ b/post/2018-12-16/博客重构(1) 架构设计.md
@@ -20,5 +20,5 @@
 
 后台服务使用 springboot 来开发，springboot 非常好用，配置少，代码简洁。将原来的邮件通知和短信通知抽离出博客系统，以后写其他的应用也可以使用消息服务。使用 thrift 做接口，thrift 是 google 的一款 RPC 框架，效率高，跨语言。博客服务、前端服务、消息服务都通过 docker 打成镜像，上传至服务器运行。
 
-实现了使用 markdown 格式写博客，然后传到 github，博客服务从 github 拉取代码生成 Web 页面功能。其实一个博客服务不用搞这么复杂，主要是想练练手，前后端代码分离、博客静态化、微服务的开发思想、自动化运维都理了一遍。
+实现了使用 markdown 格式写博客，然后传到 github，博客服务从 github 拉取代码生成 Web 页面功能。实现了前后端代码分离、博客静态化、备份、修改历史的记录，符合微服务的开发理念。
 
