--- a/draft/个人错误记录.md
+++ b/draft/个人错误记录.md
@@ -51,7 +51,7 @@ docker run --name some-mariadb -e MYSQL_ROOT_PASSWORD=my-secret-pw -p 3306:3306 
 [root@host .ssh]$ cat id_rsa.pub >> authorized_keys
 ```
 
-编辑 /etc/ssh/sshd_config 文件，进行如下设置：
+编辑 /etc屏幕裂了/ssh/sshd_config 文件，进行如下设置：
 
 ```
 RSAAuthentication yes
@@ -394,3 +394,78 @@ kubectl config set-context $(kubectl config current-context) --namespace=service
 28、src/main/docker/env/ 目录下的内容无法使用 git 提交
 
 去掉 .gitignore 里面的 env/ 那一行
+
+
+
+29、CentOS一键安装shadowsocks脚本
+
+```
+wget --no-check-certificate https://raw.githubusercontent.com/teddysun/shadowsocks_install/master/shadowsocks.sh
+chmod +x shadowsocks.sh
+./shadowsocks.sh 2>&1 | tee shadowsocks.log
+```
+
+
+
+30、Centos安装docker
+
+安装依赖包
+
+```bash
+$ sudo yum install -y yum-utils \
+           device-mapper-persistent-data \
+           lvm2
+```
+
+执行下面的命令添加 `yum` 软件源：
+
+```bash
+$ sudo yum-config-manager \
+    --add-repo \
+    https://mirrors.ustc.edu.cn/docker-ce/linux/centos/docker-ce.repo
+
+
+# 官方源
+# $ sudo yum-config-manager \
+#     --add-repo \
+#     https://download.docker.com/linux/centos/docker-ce.repo
+```
+
+更新 `yum` 软件源缓存，并安装 `docker-ce`。
+
+```bash
+$ sudo yum makecache fast
+$ sudo yum install docker-ce
+```
+
+启动docker
+
+```bash
+$ sudo systemctl enable docker
+$ sudo systemctl start docker
+```
+
+
+
+31、springboot 启动时 --spring.profiles.active=dev 不起作用
+
+SpringApplication run 没有传入args参数
+
+```
+public class App {
+    public static void main( String[] args ) {
+        SpringApplication.run(App.class);
+    }
+}
+```
+
+改为
+
+```
+public class App {
+    public static void main( String[] args ) {
+        SpringApplication.run(App.class, args);
+    }
+}
+```
+
