--- a/draft/个人错误记录.md
+++ b/draft/个人错误记录.md
@@ -219,7 +219,7 @@ datasource:
 
 环境变量没有值可以配置个默认的参数，冒号后跟默认的值，${ENV_PASSWORD:123456}
 
-启动后发现无法获取，经查是intellij无法使用系统的环境变量，可在启动配置中设置environment variables
+启动后发现无法获取，经查是intellij中启动的程序无法使用系统中的环境变量，可在启动配置中设置environment variables
 
 ![image-20190115195608002](assets/image-20190115195608002.png)
 
@@ -381,7 +381,9 @@ post版本为6.7.2 Mac App，最后发现是没有保存，Ctrl+S后就生效了
 
 26、如何设置kubernetes默认的namespace
 
-kubectl config set-context $(kubectl config current-context) --namespace=service-default
+kubectl config set-context $(kubectl config current-context) --namespace=serivce-prison 
+
+
 
 
 
@@ -467,5 +469,432 @@ public class App {
         SpringApplication.run(App.class, args);
     }
 }
+```
+
+
+
+32、macos 系统中 teamviewer 被识别为商业用途，如何修改teamview id？
+
+执行下面的 python 脚本，修改mac地址
+
+```python
+#!/usr/bin/env python 
+
+#coding:utf-8
+import sys
+import os
+import glob
+import platform
+import re
+import random
+import string
+
+print('''
+--------------------------------
+TeamViewer ID Changer for MAC OS
+--------------------------------
+''')
+
+if platform.system() != 'Darwin':
+    print('This script can be run only on MAC OS.')
+    sys.exit();
+
+if os.geteuid() != 0:
+    print('This script must be run form root.')
+    sys.exit();
+
+if os.environ.has_key('SUDO_USER'):
+    USERNAME = os.environ['SUDO_USER']
+    if USERNAME == 'root':
+       print('Can not find user name. Run this script via sudo from regular user')
+       sys.exit();
+else:
+    print('Can not find user name. Run this script via sudo from regular user')
+    sys.exit();
+
+HOMEDIRLIB = '/Users/' + USERNAME  + '/library/preferences/'
+GLOBALLIB  =  '/library/preferences/'
+
+CONFIGS = []
+
+# Find config files
+
+def listdir_fullpath(d):
+    return [os.path.join(d, f) for f in os.listdir(d)]
+
+for file in listdir_fullpath(HOMEDIRLIB):
+    if 'teamviewer'.lower() in file.lower():
+        CONFIGS.append(file)
+
+if not CONFIGS:
+    print ('''
+There is no TemViewer configs found.
+Maybe you have deleted it manualy or never run TeamViewer after installation.
+Nothing to delete.
+''')
+# Delete config files
+else:
+    print("Configs found:\n")
+    for file in CONFIGS:
+        print file
+
+    print('''
+This files will be DELETED permanently.
+All TeamViewer settings will be lost
+''')
+    raw_input("Press Enter to continue or CTR+C to abort...")
+
+    for file in CONFIGS:
+        try:
+            os.remove(file)
+        except:
+            print("Cannot delete config files. Permission denied?")
+            sys.exit();
+    print("Done.")
+
+# Find binaryes
+
+TMBINARYES = [
+'/Applications/TeamViewer.app/Contents/MacOS/TeamViewer',
+'/Applications/TeamViewer.app/Contents/MacOS/TeamViewer_Service',
+'/Applications/TeamViewer.app/Contents/Helpers/TeamViewer_Desktop',
+]
+
+for file in TMBINARYES:
+    if os.path.exists(file):
+        pass
+    else:
+        print("File not found: " + file)
+        print ("Install TeamViewer correctly")
+        sys.exit();
+
+# Patch files
+
+def idpatch(fpath,platf,serial):
+    file = open(fpath, 'r+b')
+    binary = file.read()
+    PlatformPattern = "IOPlatformExpert.{6}"
+    SerialPattern =  "IOPlatformSerialNumber%s%s%sUUID"
+
+    binary = re.sub(PlatformPattern, platf, binary)
+    binary = re.sub(SerialPattern % (chr(0), "[0-9a-zA-Z]{8,8}", chr(0)), SerialPattern%(chr(0), serial, chr(0)), binary)
+
+    file = open(fpath,'wb').write(binary)
+    return True
+
+def random_generator(size=8, chars=string.ascii_uppercase + string.digits):
+    return ''.join(random.choice(chars) for _ in range(size))
+
+RANDOMSERIAL = random_generator()
+RANDOMPLATFORM = "IOPlatformExpert" + random_generator(6)
+
+
+for file in TMBINARYES:
+        try:
+            idpatch(file,RANDOMPLATFORM,RANDOMSERIAL)
+        except:
+            print "Error: can not patch file " + file
+            print "Wrong version?"
+            sys.exit();
+
+print "PlatformDevice: " + RANDOMPLATFORM
+print "PlatformSerial: " + RANDOMSERIAL
+
+print('''
+ID changed sucessfully.
+!!! Restart computer before using TeamViewer !!!!
+''')
+```
+
+
+
+33、kubectl 拷贝文件到容器内
+
+```
+kubectl cp <some-namespace>/<some-pod>:/tmp/foo /tmp/bar
+```
+
+
+
+34、linux 如何删除（杀掉）所有 java 进程
+
+```
+ps -ef | grep java | grep -v grep | awk '{print $2}' | xargs kill -9
+```
+
+
+
+35、单点登录实现
+
+1、基于cookie，不能实现跨域，cookie泄漏有安全性问题
+
+![way1](assets/20161123092035062.jpeg)
+
+2、给予cookie和jsonp，支持跨域，同样有安全性问题
+
+![way2](assets/20161123092145251.jpeg)
+
+3、通过页面重定向实现
+
+![way3](assets/20161123092255186.jpeg)
+
+https://blog.csdn.net/qq_39089301/article/details/80615348
+
+
+
+36、在bash_profile中配置环境变量后不生效，需要每次source后才起作用
+
+因为我使用的是 zsh，打开控制台时时不执行 ~/.bash_profile 的，如果想要这个文件生效，那么修改zsh的配置文件。编辑 ~/.zshrc，在文件中加入一行：
+
+```
+source ~/.bash_profile
+```
+
+
+
+37、intellij中控制台mvn spring-boot:run无法启动，无法找到环境变量
+
+参考36后，执行source ~/.bash_profile 或者重启intellij 生效
+
+
+
+38、intellij中启动springboot失败，没有错误日志
+
+mvn spring-boot:run 可以看到具体的错误日志
+
+
+
+39、怎么切换bash为zsh
+
+```
+chsh -s /bin/zsh
+```
+
+切换回bash
+
+```
+chsh -s /bin/bash
+```
+
+查询本机安装了哪些shell
+
+```
+cat /etc/shells
+```
+
+
+
+40、centos 关机
+
+```
+shutdown -r now 
+```
+
+
+
+41、vmware fusion 使用
+
+设置共享文件夹： https://blog.csdn.net/yangcs2009/article/details/46625377
+
+安装 vmware tools： https://blog.51cto.com/tenderrain/2090619
+
+
+
+42、rpm 安装、查看与删除
+
+```
+# 安装
+rpm -ivh test.rpm
+# 查询
+rpm -qa|grep test
+# 删除
+rpm -e test --nodeps
+```
+
+
+
+43、linux 解压 tar.gz 文件
+
+```
+tar -xvf file.tar 		//解压 tar包
+tar -xzvf file.tar.gz 	//解压tar.gz
+tar -xjvf file.tar.bz2  //解压 tar.bz2
+tar -xZvf file.tar.Z	//解压tar.Z
+unrar e file.rar		//解压rar
+unzip file.zip			//解压zip
+```
+
+
+
+44、docker toolbox 配置共享文件夹
+
+```
+sudo -i
+mount -t vboxsf Desktop /data  #前者是共享文件夹名 ，后面是宿主机上的映射目录名
+```
+
+经验证：不需要执行命令，docker-machine ssh后直接可以看到 /data目录
+
+https://blog.csdn.net/malcody9/article/details/79315700
+
+
+
+45、centos安装后无网络连接，ip addr后 enp2s0无ip地址
+
+```
+cd /etc/sysconfig/network-scripts
+vi ifcfg-enp2s0
+```
+
+将 ONBOOT=no 改为 ONBOOT=yes，重启centos
+
+https://www.jb51.net/article/98539.htm
+
+
+
+
+
+46、docker 容器内安装 ps 、 ping、wget
+
+apt-get install -y procps inetutils-ping wget
+
+
+
+47、centos 挂载ntfs
+
+下载安装包 <http://linux.softpedia.com/get/System/Hardware/ntfs-3g-15028.shtml>
+
+```
+tar xzvf ntfs-3g-***.tar.gz
+cd ntfs-3g-***
+./configure
+make
+make install
+mount -t ntfs-3g /dev/sdc1 /mnt
+```
+
+
+
+48、centos配置固定IP
+
+注解
+
+```
+IPADDR=192.168.191.131 # ip地址
+NETMASK=255.255.255.0 # 子网掩码
+NETWORK=192.168.191.0 # ip段
+GATEWAY=192.168.191.2 # 网关地址
+BROADCAST=192.168.191.255 # 广播地址, 网关地址最后一位换成255
+
+service network restart
+```
+
+实际例子
+
+```
+TYPE=Ethernet
+PROXY_METHOD=none
+BROWSER_ONLY=no
+DEFROUTE=yes
+IPV4_FAILURE_FATAL=no
+IPV6INIT=yes
+IPV6_AUTOCONF=yes
+IPV6_DEFROUTE=yes
+IPV6_FALURE_FATAL=no
+IPV6_ADDR_GEN_MODE=stable-privacy
+NAME=enp2s0
+UUID=877....
+DEVICE=enp2s0
+ONBOOT=yes
+IPV6_PRIVACY=no
+PREFIX=24
+GATEWAY=192.101.1.1
+IPADDR=192.101.1.198
+```
+
+49、centos桌面版本关闭休眠
+
+因为X的屏幕保护，[电源管理](https://www.baidu.com/s?wd=%E7%94%B5%E6%BA%90%E7%AE%A1%E7%90%86&tn=24004469_oem_dg&rsv_dl=gh_pl_sl_csd)机制跟gnome不一样。所以无法使用对gnome的一套工具进行设置。
+所幸发现了名为xset的小工具
+
+xset程序主要对启动X windows以后，对x windows属性进行设置的。
+具体用法可使用 man xset进行查看。此处不再描述。
+
+可以使用xset命令设置各项：
+
+```
+#xset s 300  #设置屏保时间为 300 秒，时间单位为秒
+#xset s 0    #关闭屏幕保护 
+#xset dpms ``0` `0` `0` `# 三个数值分别为Standby、Suspend、Off，单位秒 ``#xset -dpms      #关闭电源管理`
+```
+
+也可以编辑xorg.conf，添加如下选项把xscreen saver直接关闭，vim /etc/X11/xorg.conf：
+
+```
+`Section “ServerFlags” ``Option “BlankTime” “``0``″ #关闭黑屏 ``Option “StandbyTime” “``0``″ #关闭待机功能 ``Option “SuspendTime” “``0``″ #关闭睡眠功能 ``Option “OffTime” “``0``″ ``EndSection`
+```
+
+修改后重启x即可生效。 
+
+编辑xorg.conf文件和使用xset命令效果一样，可使用xset -q查看设置和当前配置。
+
+ 
+
+备注：
+
+时间值设置成0 就是关闭该项.
+更多配置请看：http://www.x.org/archive/X11R6.9.0/doc/html/xorg.conf.5.html并查找“ServerFlags”。
+
+
+
+50、docker 批量操作
+
+批量删除 tag为none的镜像
+
+```
+docker images|grep none|awk '{print $3}'|xargs docker rmi
+```
+
+批量push
+
+```
+docker images | grep njwjw-1.0 | awk '{print "docker push "$1":"$2}' | sh
+```
+
+批量apply
+
+```
+ls -l | awk '{if($9)print "kubectl apply -f "$9" --record"}' | sh
+```
+
+
+
+51、mongodb 拷贝数据
+
+```
+db.copyDatabase('dataplatform','dataplatform','192.168.50.6:27017',null)
+
+
+cd /data/mongodb/
+tar -zcvf all.tar.gz *
+scp liang@192.168.60.34:/data/mongodb/all.tar.gz /Users/qping/Downloads
+
+```
+
+
+
+52、Centos (linux) 增加root权限用户
+
+```
+useradd -m qping
+passwd qping
+```
+
+增加用户后，使用 `visudo` 来修改sudoers文件，在以下文件添加一行 
+
+```
+## Allow root to run any commands anywhere
+root    ALL=(ALL)       ALL
+qping   ALL=(ALL)       ALL   # <~ 添加这个
 ```
 
