modify about me

--- a/post/page/关于我.md
+++ b/post/page/关于我.md
@@ -9,7 +9,7 @@ defaultLayout: false
 
 这个博客用于学习记录和探索发现，分享与实现一些自己IDEA。
 
-牢记自己是个 java 程序员，不要沉迷于 javascript ，那是前端该干的事。不要沉迷于 python，那是数据该干的事。不要沉迷于 docker，那是运维去干的事。
+一个不误正业的  java 程序员。
 
 
 
