ARTS frist week

--- a/draft/个人错误记录.md
+++ b/draft/个人错误记录.md
@@ -898,3 +898,67 @@ root    ALL=(ALL)       ALL
 qping   ALL=(ALL)       ALL   # <~ 添加这个
 ```
 
+
+
+53、 mongodb导入导出数据
+
+参见 <https://segmentfault.com/a/1190000006236494>
+
+先本地安装mongodb，因为需要使用到 **mongodump**、**mongorestore** 两个工具
+
+```
+brew install mongodb
+```
+
+导出和导入命令
+
+```
+# 整库导出和导入
+mongodump -h IP --port 端口 -u 用户名 -p 密码 -d 数据库 -o 文件存在路径
+mongorestore -h IP --port 端口 -u 用户名 -p 密码 -d 数据库 --drop 文件存在路径
+
+# 导出单张表
+mongoexport -h IP --port 端口 -u 用户名 -p 密码 -d 数据库 -c 表名 -f 字段
+mongoimport -h IP --port 端口 -u 用户名 -p 密码 -d 数据库 -c 表名 --upsert --drop 文件名
+```
+
+实际使用
+
+```
+# 导出
+mongoexport -h kube0.dev-bdmd.com --port 27017 -d dataplatform -c entity.disease.document -o ~/Documents/mongodb/disease.dat
+
+mongoexport -h kube0.dev-bdmd.com --port 27017 -d dataplatform -c entity.drug.document -o ~/Documents/mongodb/drug.dat
+
+mongoexport -h kube0.dev-bdmd.com --port 27017 -d dataplatform -c entity.labitem.document -o ~/Documents/mongodb/labitem.dat
+
+mongoexport -h kube0.dev-bdmd.com --port 27017 -d dataplatform -c entity.symptom.document -o ~/Documents/mongodb/symptom.dat
+
+
+# 导入
+mongoimport -h 192.168.60.34 --port 57017 -d dataplatform -c entity.disease.document  --upsert --drop ~/Documents/mongodb/disease.dat
+
+mongoimport -h 192.168.60.34 --port 57017 -d dataplatform -c entity.drug.document  --upsert --drop ~/Documents/mongodb/drug.dat
+
+mongoimport -h 192.168.60.34 --port 57017 -d dataplatform -c entity.labitem.document  --upsert --drop ~/Documents/mongodb/labitem.dat
+
+mongoimport -h 192.168.60.34 --port 57017 -d dataplatform -c entity.symptom.document  --upsert --drop ~/Documents/mongodb/symptom.dat
+
+# 出现错误： Failed: error connecting to db server: no reachable servers
+上一个导入成功了，在导入symptom时出错，错误原因是没有建立 entity.symptom.document 集合，新建后，重新导入即可
+
+```
+
+
+
+54、zsh配置命令别名，简化shell命令
+
+vi ~/.zshrc，增加命令别名
+
+```
+# alias
+alias kubedev='kubectl --kubeconfig /Users/qping/.kube/config --context dev-context' 
+alias kubenj='kubectl --kubeconfig /Users/qping/.kube/config --context njwjw' 
+alias kubeyh='kubectl --kubeconfig /Users/qping/.kube/config --context yuhuatai-context' 
+```
+
