--- a/draft/个人错误记录.md
+++ b/draft/个人错误记录.md
@@ -823,15 +823,20 @@ xset程序主要对启动X windows以后，对x windows属性进行设置的。
 可以使用xset命令设置各项：
 
 ```
-#xset s 300  #设置屏保时间为 300 秒，时间单位为秒
-#xset s 0    #关闭屏幕保护 
-#xset dpms ``0` `0` `0` `# 三个数值分别为Standby、Suspend、Off，单位秒 ``#xset -dpms      #关闭电源管理`
+#xset s 300      # 设置屏保时间为 300 秒，时间单位为秒
+#xset s 0        # 关闭屏幕保护 
+#xset dpms 0 0 0 # 三个数值分别为Standby、Suspend、Off，单位秒
+#xset -dpms      # 关闭电源管理
 ```
 
 也可以编辑xorg.conf，添加如下选项把xscreen saver直接关闭，vim /etc/X11/xorg.conf：
 
 ```
-`Section “ServerFlags” ``Option “BlankTime” “``0``″ #关闭黑屏 ``Option “StandbyTime” “``0``″ #关闭待机功能 ``Option “SuspendTime” “``0``″ #关闭睡眠功能 ``Option “OffTime” “``0``″ ``EndSection`
+Section “ServerFlags” 
+Option “BlankTime” “0″ #关闭黑屏
+Option “StandbyTime” “0″ #关闭待机功能
+Option “SuspendTime” “0″ #关闭睡眠功能
+Option “OffTime” “0″ EndSection
 ```
 
 修改后重启x即可生效。 
