change arts dir

--- a/draft/个人错误记录.md
+++ b/draft/个人错误记录.md
@@ -967,3 +967,18 @@ alias kubenj='kubectl --kubeconfig /Users/qping/.kube/config --context njwjw'
 alias kubeyh='kubectl --kubeconfig /Users/qping/.kube/config --context yuhuatai-context' 
 ```
 
+
+
+55、spring jpa保存后没有返回id
+
+需要加上注解 @GeneratedValue
+
+```
+  @Id
+  @Column(name = "id")
+  @GeneratedValue(strategy = GenerationType.IDENTITY)
+  private int id;
+```
+
+
+
