--- a/draft/个人错误记录.md
+++ b/draft/个人错误记录.md
@@ -933,6 +933,8 @@ mongoimport -h IP --port 端口 -u 用户名 -p 密码 -d 数据库 -c 表名 --
 # 导出
 mongoexport -h kube0.dev-bdmd.com --port 27017 -d dataplatform -c entity.disease.document -o ~/Documents/mongodb/disease.dat
 
+mongoexport -h kube0.dev-bdmd.com --port 27017 -d dataplatform -c entity.disease.wiki.document -o ~/Documents/mongodb/disease.wiki.dat
+
 mongoexport -h kube0.dev-bdmd.com --port 27017 -d dataplatform -c entity.drug.document -o ~/Documents/mongodb/drug.dat
 
 mongoexport -h kube0.dev-bdmd.com --port 27017 -d dataplatform -c entity.labitem.document -o ~/Documents/mongodb/labitem.dat
@@ -942,6 +944,8 @@ mongoexport -h kube0.dev-bdmd.com --port 27017 -d dataplatform -c entity.symptom
 
 # 导入
 mongoimport -h 192.168.60.34 --port 57017 -d dataplatform -c entity.disease.document  --upsert --drop ~/Documents/mongodb/disease.dat
+
+mongoimport -h 192.168.60.34 --port 57017 -d dataplatform -c entity.disease.wiki.document  --upsert --drop ~/Documents/mongodb/disease.wiki.dat
 
 mongoimport -h 192.168.60.34 --port 57017 -d dataplatform -c entity.drug.document  --upsert --drop ~/Documents/mongodb/drug.dat
 
@@ -981,4 +985,58 @@ alias kubeyh='kubectl --kubeconfig /Users/qping/.kube/config --context yuhuatai-
 ```
 
 
+
+56、org.springframework.http.converter.HttpMessageNotReadableException: Required request body is missing
+
+后台方法是这样的，debug请求发现 RequestBody中是有 token 的，但是还是报错  Required request body is missing
+
+```java
+
+@PostMapping(value = "/getUserByToken" , produces = "application/json")
+public ApiResult getUserByToken(@ApiParam(value = "token令牌") @RequestBody TokenWrapper tokenWrapper) throws Exception {
+	SessionUserVO user = userService.getUserByToken(tokenWrapper.getToken());
+  if(user == null){
+    return new ApiResult(ApiResult.TOKEN_ERR, "token无效", null);
+  }
+  return new ApiResult(ApiResult.SUCCESS, "成功", user);
+}
+```
+
+
+
+发现定义了 拦截器 Interceptor，拦截器中读取 request 的 inputstream 流，读取完后，后面的 Controller 无法通过  @RequestBody 的方式获取传值。
+
+```
+byte[] bytes = IOUtils.toByteArray(request.getInputStream());
+String params = new String(bytes, request.getCharacterEncoding());
+request.setAttribute("param", params);
+```
+
+解决方法：通过 request.getAttribute("param") 来获取
+
+
+
+57、docker 运行sqlserver
+
+创建容器
+
+```
+docker run -e 'ACCEPT_EULA=Y' -e 'SA_PASSWORD=P@ssw0rd' \
+   -p 1433:1433 --name sqlserver \
+   -d mcr.microsoft.com/mssql/server:2017-latest
+```
+
+创建 Database
+
+```
+docker exec -it sqlserver "bash"
+/opt/mssql-tools/bin/sqlcmd -S localhost -U SA -P 'P@ssw0rd'
+```
+
+屏幕出现 `> 1` 后输入：
+
+```
+CREATE DATABASE TestDB COLLATE Chinese_PRC_CS_AS
+GO
+```
 
