--- a/draft/个人错误记录.md
+++ b/draft/个人错误记录.md
@@ -19,7 +19,7 @@ navicat连接不报错，可建库，但java连接出错。
 
 ``` bash
 docker pull mariadb
-docker run --name some-mariadb -e MYSQL_ROOT_PASSWORD=my-secret-pw -p 3306:3306 -d mariadb
+docker run --name mariadb -e MYSQL_ROOT_PASSWORD=root -p 3306:3306 -d mariadb
 ```
 
 
@@ -1039,4 +1039,132 @@ docker exec -it sqlserver "bash"
 CREATE DATABASE TestDB COLLATE Chinese_PRC_CS_AS
 GO
 ```
+
+
+
+58、Unable to connect to the server: dial tcp 192.168.60.28:6443: getsockopt: operation timed out
+
+kubectl get pod时出现超时错误，解决方法，重启公司VPN
+
+
+
+
+
+59、windows R语言安装 xlsx 时出错：JAVA_HOME cannot be determined from the Registry!
+
+执行命令：`install.packages("xlsx")` ，详细错误信息如下，系统为windows，已设置过环境变量 JAVA_HOME 、CLASSPATH 和 PATH
+
+```
+Error : loadNamespace()里算'rJava'时.onLoad失败了，详细内容：
+调用: fun(libname, pkgname)
+错误: JAVA_HOME cannot be determined from the Registry! Try re-installing Java and make sure R and Java have matching architectures.
+Error: ‘rJava’程辑包或名字空间载入失败
+```
+
+Sys.getenv("JAVA_HOME") 发现 R 读取不到系统环境变量。
+
+解决方法：Sys.setenv(JAVA_HOME="jre的路径")
+
+
+
+继续执行命令：`install.packages("xlsx")`  ，又报错：
+
+```
+error: 无法载入共享目标对象‘C:/Users/Administrator/Documents/R/win-library/3.3/rJava/libs/i386/rJava.dll’
+```
+
+解决方法是：Jdk版本需要和 R 语言版本一致，**且 R 语言 32 位和 64 位版本不能同时安装**。
+
+
+
+60、macos R语言安装 xlsx 时出错：package or namespace load failed for ‘xlsx’
+
+```
+错误: package or namespace load failed for ‘xlsx’:
+ loadNamespace()里算'rJava'时.onLoad失败了，详细内容：
+  调用: dyn.load(file, DLLpath = DLLpath, ...)
+  错误: 无法载入共享目标对象‘/Library/Frameworks/R.framework/Versions/3.5/Resources/library/rJava/libs/rJava.so’：:
+  dlopen(/Library/Frameworks/R.framework/Versions/3.5/Resources/library/rJava/libs/rJava.so, 6): Library not loaded: /Library/Java/JavaVirtualMachines/jdk-11.0.1.jdk/Contents/Home/lib/server/libjvm.dylib
+  Referenced from: /Library/Frameworks/R.framework/Versions/3.5/Resources/library/rJava/libs/rJava.so
+  Reason: image not found
+```
+
+
+
+解决方法：https://blog.csdn.net/weixin_38986122/article/details/80931223
+
+
+
+61、R 语言安装 forecast 失败：namespace 'rlang' 0.2.0 is being loaded, but >= 0.2.1 is required
+
+```
+> install.packages("forecast")
+
+....
+  有二进制版本的，但源代码版本是后来的:
+         binary source needs_compilation
+rlang     0.2.0  0.3.4              TRUE
+ggplot2   2.2.1  3.1.1             FALSE
+forecast    8.2    8.7              TRUE
+
+....
+
+* installing *source* package 'ggplot2' ...
+** 成功将'ggplot2'程序包解包并MD5和检查
+** R
+** data
+*** moving datasets to lazyload DB
+** inst
+** preparing package for lazy loading
+Error in loadNamespace(j <- i[[1L]], c(lib.loc, .libPaths()), versionCheck = vI[[j]]) : 
+  namespace 'rlang' 0.2.0 is being loaded, but >= 0.2.1 is required
+ERROR: lazy loading failed for package 'ggplot2'
+* removing 'C:/Users/Administrator/Documents/R/win-library/3.3/ggplot2'
+
+```
+
+
+
+解决方法：升级 R 语言至最新版本
+
+
+
+62、Rserve 启动报错：Fatal error: you must specify '--save', '--no-save' or '--vanilla'
+
+解决方法：Rserve(port=6311, args="--no-save")
+
+https://github.com/clbustos/Rserve-Ruby-client/issues/19
+
+
+
+63、解决mac系统下“无效的服务器地址 BasicIPv6ValidationError”
+
+在mac系统下(os x 10),手动设置ip地址后，弹出错误提示“无效的服务器地址 BasicIPv6ValidationError”
+ 解决的办法是:
+
+```
+// 列出所有网络服务信息;
+networksetup -listallnetworkservices
+// 停止对应网卡的ipV6服务;
+networksetup -setv6off "USB Ethernet" 
+// 手动设置网卡的ip地址;
+networksetup -setmanual "USB Ethernet" 192.168.1.177 255.255.255.0 192.168.1.1   
+
+```
+
+
+
+链接：https://www.jianshu.com/p/e07d2ecfa3b2
+
+
+
+64、R语言安装程序包出错：package ‘fUnitRoots’ is not available (for R version 3.6.0) 
+
+urca / fUnitRoots /  FinTS / fGarch / nlme / fArma 这几个都安装不了，网上解决方案是更换镜像源，但实际遇到的问题是windows版本太新安装失败，需要降低版本到3.5.2
+
+
+
+：![image-20190515095131493](assets/image-20190515095131493.png)
+
+
 
