--- a/draft/个人错误记录.md
+++ b/draft/个人错误记录.md
@@ -1202,3 +1202,196 @@ Preferences → Profiles → Key Mappings
 ```
 
 https://www.jianshu.com/p/c0816fa6ac1b
+
+
+
+69、kubectl 错误  exec: "bash": executable file not found in $PATH
+
+```
+rpc error: code = 2 desc = oci runtime error: exec failed: exec: "bash": executable file not found in $PATH
+error: error executing remote command: error executing command in container: Error executing in Docker Container: 126
+```
+
+使用： kubectl exec -it XXXXX sh
+
+
+
+70、word表格拷贝到excel，合并单元格
+
+如果word中的单元格内容含有换行，在excel中就会变为多个单元格，如果只想一个单元格，就需要替换换行。
+
+硬回车：`^p`  ，软回车： `^l` ，`ctrl + H` 替换。
+
+
+
+71、[SpringBoot配置devtools实现热部署](https://www.cnblogs.com/lspz/p/6832358.html)
+
+spring为开发者提供了一个名为spring-boot-devtools的模块来使Spring Boot应用支持热部署，提高开发者的开发效率，无需手动重启Spring Boot应用。
+
+**devtools的原理**
+
+深层原理是使用了两个ClassLoader，一个Classloader加载那些不会改变的类（第三方Jar包），另一个ClassLoader加载会更改的类，称为restart ClassLoader,这样在有代码更改的时候，原来的restart ClassLoader 被丢弃，重新创建一个restart ClassLoader，由于需要加载的类相比较少，所以实现了较快的重启时间。
+
+使用需要添加以下的配置：
+
+```
+<dependencies>
+    <dependency>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-devtools</artifactId>
+        <optional>true</optional>
+    </dependency>
+    <dependency>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-web</artifactId>
+    </dependency>
+
+    <dependency>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-test</artifactId>
+        <scope>test</scope>
+    </dependency>
+</dependencies>
+
+<build>
+    <plugins>
+        <plugin>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-maven-plugin</artifactId>
+            <configuration>
+                <fork>true</fork>
+            </configuration>
+        </plugin>
+    </plugins>
+</build>
+```
+
+**说明：**
+
+（1） devtools可以实现页面热部署（即页面修改后会立即生效，这个可以直接在application.properties文件中配置spring.thymeleaf.cache=false来实现），
+实现类文件热部署（类文件修改后不会立即生效），实现对属性文件的热部署。
+即devtools会监听classpath下的文件变动，并且会立即重启应用（发生在保存时机），注意：因为其采用的虚拟机机制，该项重启是很快的
+（2）配置了true后在修改java文件后也就支持了热启动，不过这种方式是属于项目重启（速度比较快的项目重启），会清空session中的值，也就是如果有用户登陆的话，项目重启后需要重新登陆。
+
+默认情况下，/META-INF/maven，/META-INF/resources，/resources，/static，/templates，/public这些文件夹下的文件修改不会使应用重启，但是会重新加载（devtools内嵌了一个LiveReload server，当资源发生改变时，浏览器刷新）。
+
+**devtools的配置**
+
+在application.properties中配置spring.devtools.restart.enabled=false，此时restart类加载器还会初始化，但不会监视文件更新。
+在SprintApplication.run之前调用System.setProperty(“spring.devtools.restart.enabled”, “false”);可以完全关闭重启支持，配置内容：
+
+```
+#热部署生效
+spring.devtools.restart.enabled: true
+#设置重启的目录
+#spring.devtools.restart.additional-paths: src/main/java
+#classpath目录下的WEB-INF文件夹内容修改不重启
+spring.devtools.restart.exclude: WEB-INF/**
+```
+
+**IDEA配置**
+
+当我们修改了Java类后，IDEA默认是不自动编译的，而spring-boot-devtools又是监测classpath下的文件发生变化才会重启应用，所以需要设置IDEA的自动编译：
+
+（1）File-Settings-Compiler-Build Project automatically
+
+（2）ctrl + shift + alt + /,选择Registry,勾上 Compiler autoMake allow when app running
+
+**测试**
+
+- 修改类–>保存：应用会重启
+- 修改配置文件–>保存：应用会重启
+- 修改页面–>保存：应用不会重启，但会重新加载，页面会刷新（原理是将spring.thymeleaf.cache设为false，参考:Spring Boot配置模板引擎）
+
+
+
+72、热部署神器 jrebel 的安装与激活
+
+离线激活方式： https://blog.csdn.net/lwl20140904/article/details/81071305
+
+在线激活方式：https://blog.csdn.net/qq_31024823/article/details/82020791
+
+1、打开激活代理，反向代理 idea.lanyus.com
+
+```
+docker run --name proxy -d -p 9999:80 vpn.qping.me/jrebel-proxy:v1.0
+```
+
+2、在idea > plugins > 安装 jrebel
+
+3、激活
+
+选择Team URL：
+
+第一行填入： 激活代理地址 + UUID，例如：http://localhost:9999/ee19a6eb-1a65-41eb-962b-7bd5a32f9945
+
+第二行填入：自己的邮箱
+
+![image-20190802114817551](assets/image-20190802114817551.png)
+
+4、在idea > settings > JRebel 中 点击 Work offline
+
+![image-20190802115020353](assets/image-20190802115020353.png)
+
+
+
+73、git 添加gitignore文件后使其生效
+
+遇到的问题
+我们发现在添加.gitignore文件后，当我们想push文件的时候，我们声明的忽略文件还是会出现在push的目录中
+
+原因分析
+某些文件已经被纳入版本管理中，就算是在.gitignore中已经声明也不会起作用
+
+解决方案
+我们应该先把本地的缓存删除，然后再进行push，操作步骤如下
+
+```none
+git rm -r --cached . // 删除本地缓存
+git add . // 添加要提交的文件
+git commit -m 'update .gitignore' // 更新本地的缓存
+```
+
+
+
+74、自己打包的jar，依赖没有传递
+
+原因：使用了 scope=system 引起
+
+
+
+
+
+75、阿里云SSH几分钟就会断开解决方法
+
+vim 修改 ssh 的配置文件
+
+``` shell
+/etc/ssh/sshd_config
+```
+
+找到下面两行
+
+``` shell
+#ClientAliveInterval 0
+#ClientAliveCountMax 3
+```
+
+去掉注释，改成
+
+``` shell
+ClientAliveInterval 30
+ClientAliveCountMax 86400
+```
+
+这两行的意思分别是
+
+1、客户端每隔多少秒向服务发送一个心跳数据
+
+2、客户端多少秒没有相应，服务器自动断掉连接
+
+重启sshd服务
+
+``` shell
+service sshd restart
+```
